[package]
name = "sbpf-linker"
edition = "2024"
version = "0.1.9"
authors = ["Claire Fan <claire@blueshift.gg>"]
description = "Upstream BPF linker for SBPF V0/V3 programs"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/blueshift-gg/sbpf-linker"
repository = "https://github.com/blueshift-gg/sbpf-linker"
keywords = ["cli", "sbpf", "linker", "solana"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sbpf_linker"

[dependencies]
sbpf-assembler = "0.2.4"
sbpf-common = "0.2.4"
clap = { workspace = true }
either = { version = "1.16.0", features = ["serde"] }
object = { version = "0.39.1", features = ["write"] }
bpf-linker = { version = "0.10.4", default-features = false }
thiserror = "2.0.18"

tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-tree = "0.4"

tracing = "0.1"
anyhow = { workspace = true }

[dev-dependencies]
compiletest_rs = "0.11.2"
regex = { version = "1.13.1", default-features = false }
rustc-build-sysroot = { version = "0.5.13", default-features = false }
which = { version = "8.0.5", default-features = false, features = [
    "real-sys",
    "regex",
] }

[[bin]]
name = "sbpf-linker"

[[test]]
name = "tests"
path = "tests/tests.rs"

[workspace]
members = ["xtask"]

[workspace.dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
walkdir = "2.5.0"


[workspace.package]
edition = "2024"

[features]
default = ["bpf-linker/default"]
